# ScamShielddd-AI

./: .gitignore  DEPLOY.md  README.md  app.json  manifest.json  package-lock.json  package.json  playwright.config.js  project.md  tokens.css  vitest.config.js
.github/workflows/: anna-app-publish.yml  anna-app.yml  build-release.yml
.hallmark/: log.json  preflight.json
bundle/: anna-tool-ids.js  app.js  index.html  style.css
examples/anna-app-llm-demo/: README.md
examples/anna-app-llm-demo/bundle/: anna-tool-ids.js  app.js  index.html  style.css
executas/scamshield-analyzer/: executa.json  pyproject.toml  scamshield_analyzer.py
fixtures/: happy-path.jsonl
tests/bundle/: static.test.js
tests/e2e/: scamshield.spec.js
tests/plugin/: test_scamshield_analyzer.py
