[project]
name = "tool-nikku696969-scamshield-analyzer-3h8p8n7j"
version = "0.1.3"
description = "ScamShield Analyzer Executa for the ScamShield AI Anna App"
requires-python = ">=3.10"
authors = [{ name = "ScamShield AI" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
"tool-nikku696969-scamshield-analyzer-3h8p8n7j" = "scamshield_analyzer:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["scamshield_analyzer"]
